<?xml version="1.0"?>
<package>
  <name>little3d</name>
  <version>0.0.0</version>
  <description>3D Package for ROS</description>

  <maintainer email="e.ruffaldi@sssup.it">Emanuele Ruffaldi</maintainer>

  <license>Apache</license>

  <author email="e.ruffaldi@sssup.it">Emanuele Ruffaldi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libglew-dev</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
